Fix overlaid text overlapping at some page widths

--- a/app/stylesheets/index.css
+++ b/app/stylesheets/index.css
@@ -23,68 +23,18 @@ body {
   background-color: rgba(15, 15, 15, 0.92);
 }
 
-.overlay .centered-subtitle {
+.overlay-text {
   color: rgb(210, 210, 210);
   left: 50%;
   position: absolute;
   text-align: center;
-  transform: translate(-50%, -90%);
-  -ms-transform: translate(-50%, -90%);
+  -moz-transform: translate(-50%, -70%);
+  -ms-transform: translate(-50%, -70%);
+  -o-transform: translate(-50%, -70%);
+  -webkit-transform: translate(-50%, -70%);
+  transform: translate(-50%, -70%);
   top: 60%;
   width: 100%;
-}
-
-@media (min-width: 800px) {
-  .overlay .centered-subtitle {
-    transform: translate(-50%, -80%);
-    -ms-transform: translate(-50%, -80%);
-  }
-}
-
-@media (min-width: 900px) {
-  .overlay .centered-subtitle {
-    transform: translate(-50%, -70%);
-    -ms-transform: translate(-50%, -70%);
-  }
-}
-
-@media (min-width: 1200px) {
-  .overlay .centered-subtitle {
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-  }
-}
-
-.overlay .centered-title {
-  color: rgb(220, 220, 220);
-  left: 50%;
-  position: absolute;
-  text-align: center;
-    transform: translate(-50%, -110%);
-    -ms-transform: translate(-50%, -110%);
-  top: 50%;
-  width: 100%;
-}
-
-@media (min-width: 800px) {
-  .overlay .centered-title {
-    transform: translate(-50%, -80%);
-    -ms-transform: translate(-50%, -80%);
-  }
-}
-
-@media (min-width: 900px) {
-  .overlay .centered-title {
-    transform: translate(-50%, -70%);
-    -ms-transform: translate(-50%, -70%);
-  }
-}
-
-@media (min-width: 1200px) {
-  .overlay .centered-title {
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-  }
 }
 
 .section {
